--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
-  "name": "vue-poi",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "poi": "^9.6.8",
-    "typescript": "^2.6.2"
-  }
+    "name": "vue-poi",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "npx poi",
+        "build": "npx poi build",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "poi": "^9.6.8",
+        "poi-preset-typescript": "^9.0.2",
+        "typescript": "^2.6.2"
+    },
+    "dependencies": {
+        "vue-class-component": "^6.1.2",
+        "vue-property-decorator": "^6.0.0",
+        "vuex": "^3.0.1"
+    }
 }
